# django-scaffold-tools

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  leet.1139.src.1.go  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
scaffold/exceptions/: exceptions.py  middleware.py
scaffold/models/abstract/: member.py  meta.py
scaffold/models/entity/media/: admin.py  apps.py  models.py  serializers.py
scaffold/modules/: apps.py  fullclean.py
scaffold/restframework/: apps.py  authentication.py  filters.py  pagination.py  permissions.py
scaffold/settings/: __init__.py  apps.py
src/scaffold/: __init__.py  version.py
src/scaffold/apps/: __init__.py
src/scaffold/apps/config/: admin.py  apps.py  models.py  serializers.py  views.py
src/scaffold/apps/config/migrations/: 0001_initial.py
src/scaffold/apps/media/: apps.py  models.py  serializers.py  views.py
src/scaffold/exceptions/: exceptions.py  middleware.py  utils.py
src/scaffold/libs/: .gitignore
src/scaffold/libs/audiotranscode/: __init__.py
src/scaffold/libs/drf_extra_fields/: fields.py
src/scaffold/middlewares/: __init__.py  middleware.py
src/scaffold/models/abstract/: member.py  meta.py
src/scaffold/modules/: __init__.py  apps.py
src/scaffold/restframework/: authentication.py  filters.py  permissions.py  serializers.py  utils.py
src/scaffold/settings/: __init__.py
src/scaffold/utils/: __init__.py  apps.py  db_router.py  http.py
src/scaffold/utils/vcode/: __init__.py  const.py  functions.py  setup_send.py
(+3 files in other folders)
