[metadata]
name = django-scaffold-tools
version = 0.0.1
description = A reusable django-app set for a DRF django project, starting support from django 3.0.
long_description = file: README.rst
url = https://github.com/easecloud/django-scaffold-tools
author = Alfred Huang
author_email = 57082212@qq.com
license = Apache License Version 2.0
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: